Implement IRetryAnalyzer for flaky test handling
✅ Features Added:
- RetryAnalyzer: Core IRetryAnalyzer implementation with max 2 retries
- RetryListener: Auto-applies retry logic to all test methods via IAnnotationTransformer
- RetryTransformer: Enhanced retry analyzer with better logging and reporting
- Enhanced TestNG configurations with retry support
- Updated all test classes with retry analyzer annotations
- RetryDemoTest: Demonstration test class for retry functionality

🔧 Integration:
- Updated GitHub Actions workflow to use retry-enabled TestNG configuration
- Enhanced CI/CD reporting to show retry status
- Proper Extent Reports integration for retry logging
- Console logging for retry attempts and failure tracking

📊 Benefits:
- Automatic handling of flaky tests due to network/timing issues
- Zero code impact on existing tests (auto-applied via listener)
- Clear visibility into retry patterns and failure modes
- Improved test stability in CI/CD pipeline

--- a/.github/workflows/automation-tests.yml
+++ b/.github/workflows/automation-tests.yml
@@ -74,12 +74,13 @@ jobs:
     - name: Clean and compile
       run: mvn clean compile
       
-    - name: Run tests
+    - name: Run tests with retry support
       run: |
         export DISPLAY=:99
-        mvn test -Dbrowser=${{ matrix.browser }} -Djava.awt.headless=true
+        mvn test -Dbrowser=${{ matrix.browser }} -Djava.awt.headless=true -Dsurefire.suiteXmlFiles=src/test/resources/testng-with-retry.xml
       env:
         BROWSER: ${{ matrix.browser }}
+        RETRY_ENABLED: true
         
     - name: Generate Surefire Report
       if: always()
@@ -133,7 +134,8 @@ jobs:
               testSummary += `📊 **Test Summary:**\n`;
               testSummary += `- Report files found: ${xmlFiles.length}\n`;
               testSummary += `- Browser: ${{ matrix.browser }}\n`;
-              testSummary += `- Java Version: ${{ matrix.java-version }}\n\n`;
+              testSummary += `- Java Version: ${{ matrix.java-version }}\n`;
+              testSummary += `- Retry Support: ✅ Enabled (max 2 retries per test)\n\n`;
             }
           } catch (error) {
             testSummary += `Error reading test results: ${error.message}\n`;
